uploads: fix image not fitting to screen height on mobile.
On mobile browsers, the browser toolbar usually hides when you scroll down, and appears when you
scroll up. This causes the height of the viewport to change, but the `vh` unit doesn't respect this,
which caused images to not 100% fit within the available screen space when scrolling up. Using `dvh`
instead fixes it so that images are 100% visible, even as the viewport changes.

This is a recent feature, so we keep the `vh` units as a fallback.

https://caniuse.com/viewport-unit-variants

--- a/app/components/media_asset_component/media_asset_component.scss
+++ b/app/components/media_asset_component/media_asset_component.scss
@@ -11,6 +11,7 @@
   &:not(.media-asset-component-fit-height) .media-asset-paginator {
     position: sticky;
     top: calc((100vh + var(--header-visible-height) - var(--paginator-size)) / 2);
+    top: calc((100dvh + var(--header-visible-height) - var(--paginator-size)) / 2);
   }
 
   &:hover {
@@ -65,6 +66,7 @@
 
   &.media-asset-component-fit-height {
     max-height: calc(100vh - var(--header-visible-height));
+    max-height: calc(100dvh - var(--header-visible-height));
     justify-content: center;
 
     .media-asset-container {
